add comments to jupyter notebook

--- a/humans_demo/Humans.ipynb
+++ b/humans_demo/Humans.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preperation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Laden der nötigen Librarys\n",
+    "\n",
+    "get_seq um Daten von NCBI zu laden."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +35,8 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "\n",
-    "#load nucleotide sequences from NCBI \n",
+    "#load nucleotide sequences from NCBI\n",
+    "#Code aus dem Tutorial\n",
     "def get_seq(db, key, rettype=\"gb\"):\n",
     "    Entrez.email = \"A.N.Other@example.com\"\n",
     "    handle = Entrez.efetch(db=db, id=key, rettype=rettype)\n",
@@ -30,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Call NCBI API"
+    "# Laden der Neandertaler"
    ]
   },
   {
@@ -39,14 +56,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#[welche daten werden geladen?]\n",
     "#hvr-1\n",
+    "#Homo sapiens neanderthalensis isolate Feldhofer 1 D-loop, partial sequence; mitochondrial\n",
     "nea_1a = get_seq(\"nucleotide\", \"AF011222\")\n",
+    "#Homo sapiens neanderthalensis mitochondrial hypervariable region I sequence\n",
     "nea_1b = get_seq(\"nucleotide\", \"AF282971\")\n",
     "\n",
-    "#[welche daten werden geladen?]\n",
     "#hvr-2\n",
+    "#Homo sapiens neanderthalensis mitochondrial control region, hypervariable region II\n",
     "nea_2a = get_seq(\"nucleotide\", \"AF142095\")\n",
+    "#Homo sapiens neanderthalensis mitochondrial hypervariable region II sequence\n",
     "nea_2b = get_seq(\"nucleotide\", \"AF282972\")"
    ]
   },
@@ -56,8 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 206 #known length\n",
-    "\n",
+    "#Sequenzen verketten\n",
     "nea_1 = nea_1a.seq + nea_2a.seq\n",
     "nea_2 = nea_1b.seq + nea_2b.seq"
    ]
@@ -66,7 +84,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Trim sequences with local alignment"
+    "# Laden & Alignen 202 Sequenzen des modernen Menschen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- laden der d_loop Sequenzen von 202 modernen Menschen (mtDNA)\n",
+    "- pairwise alignment [local] mit der nea_1 Sequenz\n",
+    "    - die Distanzmatrix wurde aus dem Tutorial übernommen (Match: 5, Missmatch: -4, Gapöffnung: -8, Gaperweiterung: -8)\n",
+    "- gespeichert werden von jedem Alignment: \n",
+    "    - Start des Alignments (lokale Alignments müssen nicht die gesamte Sequenz alignen)\n",
+    "    - Ende des Alignments\n",
+    "    - Spanne: wie viele Basen wurde aligniert\n",
+    "    - ID des Menschen der gerade aligniert wurde (um später wieder eine valides seqIO Objekt zu erstellen)"
    ]
   },
   {
@@ -83,6 +115,7 @@
     }
    ],
    "source": [
+    "#initialisieren der Listen\n",
     "nea_1_algn = []\n",
     "sequences = []\n",
     "tmp_sequences = []\n",
@@ -90,15 +123,21 @@
     "ends = []\n",
     "span = []\n",
     "human_ids = []\n",
+    "#öffnen der d_loop Dateien aus lokalem Verzeichnis (Download: https://computationalgenomics.blogs.bristol.ac.uk/case_studies/files/2017/03/d_loop.fasta)\n",
     "with open(\"d_loop.fasta\", \"r\") as handle:\n",
     "    d_loop = list(SeqIO.parse(handle, \"fasta\"))\n",
+    "    #auslesen der Sequenzen und der IDs\n",
     "    for a in d_loop:\n",
     "        sequences.append(a)\n",
     "        human_ids.append(a.id)\n",
     "    for i in range(202):\n",
+    "        #Fortschrittsanzeige\n",
     "        if i%2 == 0:\n",
     "            print(\"|\", end=\"\")\n",
+    "        #lokales Alignment: i'te Element von d_loop mit nea_1\n",
+    "        #Distanzmatrix, siehe Beschreibung oben\n",
     "        alignment = pairwise2.align.localms(sequences[i].seq, nea_1, 5, -4, -8, -8)\n",
+    "        #Speichern des Alignments\n",
     "        tmp_sequence = alignment[i][0]\n",
     "        starts.append(alignment[i][3])\n",
     "        ends.append(alignment[i][4])\n",
@@ -111,7 +150,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Trim missing 4 Sequences from d_loop"
+    " ## Laden & Alignen der fehlenden 4 Sequenzen der modernen Menschen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aus unbekannten Gründen kann der erste for-Loop in der letzten Codezelle nicht alle Sequenzen geladen hat. Wir konnten diesen Fehler nicht anders beheben, weshalb wir diesen workaround verwendet haben.\n",
+    "Der Code ist identisch."
    ]
   },
   {
@@ -135,17 +182,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trimmen der Sequenzen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Im nächsten Schritt haben wir das kürzeste Alignment bestimmt (anhand der Spanne) und alle Sequenzen entsprechend getrimmt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#initialisieren der Liste\n",
     "trimmed_sequences = []\n",
+    "#bestimmen des kürzesten Alignments\n",
     "smallest_val = min(span)\n",
     "var = span.index(smallest_val)\n",
+    "#speichern der Start und Endwerte anhand welcher alle Sequenzen getrimmt werden\n",
     "start = starts[var]\n",
     "end = ends[var]\n",
     "\n",
+    "#Trimmen der Sequenzen\n",
     "for l in range(len(tmp_sequences)):\n",
     "    whole_sequence = tmp_sequences[l]\n",
     "    trimmed_sequence = whole_sequence[start:end]\n",
@@ -154,62 +219,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trimmen der nea Sequenzen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Das Alignment von nea_1 ist an sich schon richtig getrimmt, da ja das kürzeste Alignment zwischen modernen Mensch und nea_1 gewählt wurde. Allerdings liegt es in der Form: \"------ [...]-[SEQUENZ]-[...]-------\".\n",
+    "Wir entfernen mit der Funktion *trimmer* die Minuszeichen vor und nach der Sequenz aber nicht in der Sequenz (die Gaps gehören ja zum Alignment)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#definiere Funktion trimmer \n",
     "def trimmer(seq):\n",
+    "    #start ist zu nächst null\n",
     "    start = 0\n",
     "    var = False\n",
+    "    #solange noch \"-\" und keine Base ist, verrücke Start +1\n",
     "    while var == False:\n",
     "        if seq[start] != \"-\":\n",
     "            var = True\n",
     "        else:\n",
     "            start += 1\n",
-    "    var = False\n",
-    "    end = len(seq) -1\n",
+    "    #Ausgegeben wird die Funktion vom neuen Startwert bis Startwert + Spanne\n",
     "    return seq[start:start+min(span)]\n",
     "    \n",
-    "\n",
+    "#Funktionsaufruf\n",
     "nea_1_trimmed = trimmer(nea_1_algn[var])\n",
+    "#Anhängen von nea_1 an die anderen Sequenzen\n",
     "trimmed_sequences.append(nea_1_trimmed)\n",
+    "#Alignment von nea_2\n",
     "nea_alignment = pairwise2.align.localms(nea_1_trimmed, nea_2, 5, -4, -8, -8)\n",
+    "#Speichern das Alignments\n",
     "nea_2_untrimmed = nea_alignment[0][1]\n",
+    "#Trimmen des alignments\n",
     "nea_2_trimmed = nea_2_untrimmed[0:min(span)]\n",
+    "#Anhängen von nea_2 an die anderen Sequenzen\n",
     "trimmed_sequences.append(nea_2_trimmed)\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "record_trimmed_list = []\n",
-    "for k in range(len(trimmed_sequences)-2):\n",
-    "    x_1 = str(k+1)\n",
-    "    x_2 = \"human_\"\n",
-    "    x = str(x_2 + x_1)\n",
-    "    record_trimmed_list.append(SeqRecord(Seq(trimmed_sequences[k], generic_dna), id= x))\n",
-    "for j in range(len(trimmed_sequences)-2, len(trimmed_sequences)):\n",
-    "    x_1 = str(j-len(trimmed_sequences)+3)\n",
-    "    x_2 = \"nea_\"\n",
-    "    x = str(x_2 + x_1)\n",
-    "    record_trimmed_list.append(SeqRecord(Seq(trimmed_sequences[k], generic_dna), id= x))\n",
-    "with open(\"alignment_w_nea.fasta\", \"w\") as output_handle:\n",
-    "    SeqIO.write(record_trimmed_list, output_handle, \"fasta\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "human_ids.append(\"nea_1\")\n",
-    "human_ids.append(\"nea_2\")"
+    "# Initialisieren eines Multisequenzobjekts"
    ]
   },
   {
@@ -219,11 +282,46 @@
    "outputs": [],
    "source": [
     "record_trimmed_list = []\n",
+    "#alle Sequenzen werden als SeqRecord \n",
     "for k in range(len(trimmed_sequences)):\n",
     "    record_trimmed_list.append(SeqRecord(Seq(trimmed_sequences[k], generic_dna), id=human_ids[k]))\n",
     "align = MultipleSeqAlignment(record_trimmed_list)\n",
+    "#Speichern des Outputs\n",
+    "with open(\"alignment_w_nea.fasta\", \"w\") as output_handle:\n",
+    "    SeqIO.write(align, output_handle, \"fasta\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Berechnung der Distanzmatrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mit Hilfe der BioPython Funktion DistanceCalculator wird die Distanzmatrix der alignierten Sequenzen berrechnet. Hierbei wird im Vergleich zum Tutorial ein Fehler eingeführt. Mit \"identity\" wird ledeglich die unkorregierte Hammingdistanz berrechnet und das Tutorial verwendet die Korrektur nach Jukes-Cantor. \n",
+    "Wir haben versucht eine Jukes-Cantor-Korrektur von Hand einzupflegen, allerdings erhalten wir im ln() negative Werte, was zu einem Matheerror führt.\n",
+    "Die Formel für Jukes-Cantor: dist = -(3/4) * ln(1 - (4/3) * dist_hamming)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "calculator = DistanceCalculator('identity')\n",
     "d = calculator.get_distance(align)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Konstruieren des Baums"
    ]
   },
   {
@@ -234,6 +332,13 @@
    "source": [
     "constructor = DistanceTreeConstructor()\n",
     "n_tree = constructor.upgma(d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ausgabe des Baums im ascii Format"
    ]
   },
   {
@@ -669,6 +774,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ausgabe des Baums als Bild mit matplotlib"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -706,12 +818,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#initialisieren der Liste\n",
     "human_primates_sequences = []\n",
+    "#öffnen der Fasta-Datei aus dem lokalen Verzeichnis\n",
     "with open(\"human_primates_hvr_2.fasta\", \"r\") as handle:\n",
     "    human_primates = list(SeqIO.parse(handle, \"fasta\"))\n",
+    "    #auslesen der Sequenz\n",
     "    for a in human_primates:\n",
     "        human_primates_sequences.append(a)\n",
     "\n",
+    "#die Neandertaler Sequenz ist länger als die anderen Sequenzen und enthält im Gegensatz zu den anderen Sequenzen Gaps\n",
+    "#die Funktion remove_gaps entfernt die Gaps\n",
     "def remove_gaps(seq):\n",
     "    new_seq_list = []\n",
     "    for i in range(len(seq)):\n",
@@ -722,70 +839,24 @@
     "    return \"\".join(new_seq_list)\n",
     "\n",
     "x = remove_gaps(human_primates_sequences[-1])\n",
+    "#nach entfernen der Gaps ist die Sequenz 8 Nucleotide länger\n",
+    "#wir haben die Sequenz von Hand angeschaut - es erschien uns sinnvoller den hinteren Teil der Sequenz zu trimmen, da \n",
+    "#der Anfang der Sequenz eine hohe Übereinstimmung mit den anderen Sequenzen aufwies\n",
     "human_primates_sequences[-1].seq = Seq(x[0:len(x)-8])\n",
     "\n",
+    "#Speichern als MultipleSeq Objekt\n",
     "mult_human_primates_sequences = MultipleSeqAlignment(human_primates_sequences)\n",
+    "#Berrechnung der Distancematrix\n",
     "distances = calculator.get_distance(mult_human_primates_sequences)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7626112759643917\n",
-      "0.7626112759643917\n",
-      "0.7655786350148368\n",
-      "0.7655786350148368\n",
-      "0.7566765578635015\n",
-      "0.7566765578635015\n",
-      "0.7596439169139466\n",
-      "0.7596439169139466\n",
-      "0.7566765578635015\n",
-      "0.7566765578635015\n",
-      "0.7626112759643917\n",
-      "0.7655786350148368\n",
-      "0.7566765578635015\n",
-      "0.7596439169139466\n",
-      "0.7566765578635015\n",
-      "0.7626112759643917\n",
-      "0.7655786350148368\n",
-      "0.7566765578635015\n",
-      "0.7596439169139466\n",
-      "0.7566765578635015\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "DistanceMatrix(names=['Berber', 'Chinese', 'Georgian', 'Yoruba', 'Pan_troglodytes_1', 'Pan_troglodytes_2', 'Pan_troglodytes_3', 'Pan_paniscus_1', 'Pan_paniscus_2', 'Gorilla_gorilla_1', 'Gorilla_gorilla_2', 'Gorilla_gorilla_gorilla', 'Pongo_pygmaeus_abelii_1', 'Pongo_pygmaeus_abelii_2', 'Pongo_pygmaeus_1', 'Pongo_pygmaeus_2', 'Hylobates_lar', 'Neanderthal'], matrix=[[0], [0.011869436201780381, 0], [0.1602373887240356, 0.1572700296735905, 0], [0.005934718100890191, 0.011869436201780381, 0.1602373887240356, 0], [0.24925816023738867, 0.24925816023738867, 0.255192878338279, 0.24332344213649848, 0], [0.24925816023738867, 0.24925816023738867, 0.255192878338279, 0.24332344213649848, 0.0, 0], [0.287833827893175, 0.287833827893175, 0.2937685459940653, 0.287833827893175, 0.24332344213649848, 0.24332344213649848, 0], [0.35014836795252224, 0.35608308605341243, 0.35905044510385753, 0.35608308605341243, 0.3175074183976261, 0.3175074183976261, 0.3798219584569733, 0], [0.35014836795252224, 0.35608308605341243, 0.35905044510385753, 0.35608308605341243, 0.3175074183976261, 0.3175074183976261, 0.3798219584569733, 0.0, 0], [0.6676557863501484, 0.6617210682492581, 0.6735905044510386, 0.6676557863501484, 0.6676557863501484, 0.6676557863501484, 0.6617210682492581, 0.6765578635014837, 0.6765578635014837, 0], [0.6676557863501484, 0.6617210682492581, 0.6735905044510386, 0.6676557863501484, 0.6676557863501484, 0.6676557863501484, 0.6617210682492581, 0.6765578635014837, 0.6765578635014837, 0.0, 0], [0.4480712166172107, 0.4451038575667656, 0.4747774480712166, 0.4480712166172107, 0.456973293768546, 0.456973293768546, 0.4510385756676558, 0.4065281899109793, 0.4065281899109793, 0.6528189910979229, 0.6528189910979229, 0], [0.6943620178041543, 0.6973293768545994, 0.6973293768545994, 0.7002967359050445, 0.6913946587537092, 0.6913946587537092, 0.6913946587537092, 0.7210682492581602, 0.7210682492581602, 0.6617210682492581, 0.6617210682492581, 0.7240356083086054, 0], [0.6943620178041543, 0.6973293768545994, 0.6973293768545994, 0.7002967359050445, 0.6913946587537092, 0.6913946587537092, 0.6913946587537092, 0.7210682492581602, 0.7210682492581602, 0.6617210682492581, 0.6617210682492581, 0.7240356083086054, 0.0, 0], [0.7626112759643917, 0.7655786350148368, 0.7566765578635015, 0.7596439169139466, 0.7299703264094956, 0.7299703264094956, 0.7566765578635015, 0.685459940652819, 0.685459940652819, 0.658753709198813, 0.658753709198813, 0.6973293768545994, 0.4391691394658753, 0.4391691394658753, 0], [0.7626112759643917, 0.7655786350148368, 0.7566765578635015, 0.7596439169139466, 0.7299703264094956, 0.7299703264094956, 0.7566765578635015, 0.685459940652819, 0.685459940652819, 0.658753709198813, 0.658753709198813, 0.6973293768545994, 0.4391691394658753, 0.4391691394658753, 0.0, 0], [0.685459940652819, 0.6913946587537092, 0.6943620178041543, 0.685459940652819, 0.71513353115727, 0.71513353115727, 0.6706231454005935, 0.7121661721068249, 0.7121661721068249, 0.7121661721068249, 0.7121661721068249, 0.7210682492581602, 0.48664688427299707, 0.48664688427299707, 0.5222551928783383, 0.5222551928783383, 0], [0.18100890207715137, 0.18397626112759646, 0.18694362017804156, 0.18694362017804156, 0.24925816023738867, 0.24925816023738867, 0.2967359050445104, 0.35905044510385753, 0.35905044510385753, 0.6795252225519288, 0.6795252225519288, 0.4599406528189911, 0.7002967359050445, 0.7002967359050445, 0.7329376854599406, 0.7329376854599406, 0.7091988130563798, 0]])"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def jukes_cantor(d):\n",
-    "    for i in range(len(d)):\n",
-    "        for j in range(len(d[i])):\n",
-    "            if d[i][j] > 3/4:\n",
-    "                print(d[i][j])\n",
-    "    return d\n",
-    "jukes_cantor(distances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Tree construction mit UPGMA\n",
     "primates_tree = constructor.upgma(distances)"
    ]
   },
@@ -838,6 +909,7 @@
     }
    ],
    "source": [
+    "#Ausgabe als ascii Tree\n",
     "Phylo.draw_ascii(primates_tree)\n"
    ]
   },
@@ -860,7 +932,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#Ausgabe als Bild\n",
     "matplotlib.rc('font', size=14)\n",
     "fig = plt.figure(figsize=(30, 20), dpi=80)\n",
     "axes = fig.add_subplot(1, 1, 1)\n",
